# MiniBlender

./: .gitignore  README.md  release.sh
plugins/IADorisovkaPlugin/: CMakeLists.txt
plugins/IADorisovkaPlugin/include/: Arrow.hpp  ArrowTool.hpp  Circle.hpp  CircleTool.hpp  Global.hpp  Plugin.hpp  Rectangle.hpp  RectangleTool.hpp  Text.hpp  TextTool.hpp
plugins/IADorisovkaPlugin/source/: Arrow.cpp  ArrowTool.cpp  Circle.cpp  CircleTool.cpp  Plugin.cpp  RectTool.cpp  Rectangle.cpp  Text.cpp  TextTool.cpp
plugins/IAGraphicsPlugin/: CMakeLists.txt
plugins/IAGraphicsPlugin/inc/: Common.hpp  Drawable.hpp  IAError.hpp  Plugin.hpp  SDLRAII.hpp  Window.hpp
plugins/IAGraphicsPlugin/src/: Common.cpp  Drawable.cpp  Plugin.cpp  SDLRAII.cpp
